Fixed avatar not showing on chat

--- a/src/APFP.css
+++ b/src/APFP.css
@@ -1,3 +1,6 @@
+#app-mount .avatar-1BDn8e + h2 {
+    overflow: visible;
+}
 .avatarStack-2Dr8S9 img,
 .wrapper-1BJsBx[apfp-user-id] img {
     opacity: var(--user-avatar-opacity);
